--- a/backend/client/public/index.html
+++ b/backend/client/public/index.html
@@ -21,6 +21,19 @@
     <!-- CDNJS, development -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.js"></script>
     
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
+    <style type="text/css">
+      html, body {
+        height:100%;
+        margin:0;
+      }
+      .leaflet-container {
+        height:720px;
+        width:720px;
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
