Consolidating DBs (wip)

--- a/backend/client/public/index.html
+++ b/backend/client/public/index.html
@@ -31,10 +31,12 @@
         height:100%;
         margin:0;
       }
+
       .leaflet-container {
         height:720px;
-        width:720px;
+        width:100%;
       }
+      
     </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
